[package]
name = "update_auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
solana-program = "1.7.11"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.9.1"

[dev-dependencies]
solana-sdk = "1.7.11"
solana-program-test = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]