[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.8.8"
solana-sdk = "=1.8.8"
solana-client = "1.8.8"
solana-client-helpers = "1.0.0"
solana-cli-config = "1.8.8"

